fixing alignment icon joomla

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -3754,3 +3754,8 @@ div:first-child+.panel{
 .stats-module{
 	.clearfix();
 }
+
+.icon-wright-joomla-inverse:before,
+.icon-wright-joomla-white:before {
+	vertical-align: bottom;
+}
